--- a/Python Week 2.ipynb
+++ b/Python Week 2.ipynb
@@ -60,9 +60,67 @@
    "source": [
     "Add a functionality so that the file can be called from cli with 2 arguments<br>\n",
     "1. path to file\n",
-    "an argument --file file_name that if given will write the content to file_name or otherwise will print it to the console.\n",
-    "Add a --help cli argument to describe how the module is used"
+    "2. an argument --file file_name that if given will write the content to file_name or otherwise will print it to the console.\n",
+    "3. Add a --help cli argument to describe how the module is used"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import argparse\n",
+    "parser = argparse.ArgumentParser(description='A program that takes an input file, and writes it to either the console or a to an output file')\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    parser.add_argument('inputFile', help='Name of input file (including file-extension). Must be in the exact same directory as this file.')\n",
+    "    parser.add_argument('--o','--outputFile', help='Name of the output file.')\n",
+    "    args = parser.parse_args()\n",
+    "\n",
+    "    \n",
+    "    with open(args.inputFile,'r') as file_object:\n",
+    "        inputFileText = file_object.read()\n",
+    "\n",
+    "    if args.outputFile:\n",
+    "        with open(args.outputFile, 'w') as file_object:\n",
+    "            file_object.write(inputFileText)\n",
+    "\n",
+    "    else:\n",
+    "        print(inputFileText)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1>Exercise 2</h1>\n",
+    "\n",
+    "Create a module called utils.py with the following 5 functions:\n",
+    "\n",
+    "1. def get_file_names(folderpath,out=output.txt):\n",
+    "    \"\"\" takes a path to a folder and writes all filenames in the folder to a specified output file\"\"\"\n",
+    "\n",
+    "2. def get_all_file_names(folderpath,out=output.txt):\n",
+    "    \"\"\"takes a path to a folder and write all filenames recursively (files of all sub folders to)\"\"\"\n",
+    "\n",
+    "3. def print_line_one(file_names):\n",
+    "    \"\"\"takes a list of filenames and print the first line of each\"\"\"\n",
+    "\n",
+    "4. def print_emails(file_names):\n",
+    "    \"\"\"takes a list of filenames and print each line that contains an email (just look for @)\"\"\"\n",
+    "\n",
+    "5. def write_headlines(md_files, out=output.txt):\n",
+    "    \"\"\"takes a list of md files and writes all headlines (lines starting with #) to a file\"\"\"\n",
+    "Make sure your module can be called both from cli and imported to another module Create a new module that imports utils.py and test each function.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
