--- a/Week 3/Week 3.ipynb
+++ b/Week 3/Week 3.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Student('Tais','male','Tais.img'), Student('Klunk','male','Klunk.img'), Student('Larsi','female','Larsi.img'), Student('Zukmidek','female','Zukmidek.img'), Student('Troels','male','Troels.img')]\n"
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'write_students_to_csv' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-6df20a5d941d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    123\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstudent_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mstudent\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstudent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_avg_grade\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreverse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 125\u001b[0;31m \u001b[0mwrite_students_to_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerate_students\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'./students.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    126\u001b[0m \u001b[0mstudent_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mread_students_from_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./students.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    127\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msort_students_by_avg_grade\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstudent_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'write_students_to_csv' is not defined"
      ]
     }
    ],
@@ -20,7 +24,7 @@
     "import matplotlib.pyplot as plot\n",
     "\n",
     "genders = ['male','female']\n",
-    "names = ['Larsi', 'Lone', 'Troels', 'Tina', 'Klunk', 'Tais', 'Zukmidek']\n",
+    "names = ['Larsi', 'Lone', 'Troels', 'Tina', 'Klunk', 'Tais', 'Johnson']\n",
     "courses = ['Music','History', 'Arts and crafts', 'Physics']\n",
     "classRooms = ['1.0','1.1','1.2','1.3', '1.4','1.5']\n",
     "\n",
@@ -111,6 +115,16 @@
     "    student = Student(name, gender, data_sheet, image_url)\n",
     "    generated_students.append(student)\n",
     "  return generated_students;\n",
+    "\n",
+    "  \n",
+    "def write_students_to_csv(students, outputFile):\n",
+    "  fields = ['stud_name', 'stud_gender', 'course_name', 'classroom', 'teacher', 'ects', 'grade', 'img_url']\n",
+    "  with open(outputFile, 'w', newline='\\n') as file_object:\n",
+    "    writer = csv.DictWriter(file_object, fieldnames=fields)\n",
+    "    writer.writeheader()\n",
+    "    for student in students:\n",
+    "         for course in student.data_sheet.courses:\n",
+    "            writer.writerow({'stud_name':student.name, 'stud_gender':student.gender, 'course_name':course.name,  'classroom':course.classRoom, 'teacher':course.teacher, 'ects':course.ECTS, 'grade':course.grade, 'img_url':student.image_url})\n",
     "\n",
     "\n",
     "\n",
@@ -993,7 +1007,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
